...
    <string name="quick_search_atm_text">ATM</string>
    <string name="quick_search_shopping_text">Shopping</string>
    <string name="quick_search_title">Quick Search</string>

    <string name="places_api_type_atm">atm</string>
    <string name="places_api_type_movie_theater">movie_theater</string>
    <string name="places_api_type_restaurant">restaurant</string>
    <string name="places_api_shopping_mall">shopping_mall</string>
    <string name="point_open_now_text">Open Now</string>
    <string name="place_name_hint">Place Name</string>
    <string name="place_rating_hint">3.5</string>
    <string name="place_details_address_hint">25th Street, Brooklyn, USA</string>
    <string name="place_details_phone">(02) 089 9876</string>
...
