...

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/search_box_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:padding="@dimen/search_box_padding"
                android:hint="@string/hint_search_box"
                android:imeOptions="actionSearch"
...
